refactor : 소나클라우드 이슈 해결